--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,20 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-18 Wed 12:00]
+#+CAPTION: Clock summary at [2017-01-18 Wed 13:51]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *14:53* |       |       | 100.0 |
+| *Total time*                                                                | *16:05* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 14:53   |       |       | 100.0 |
-| Active                                                                      |         | 14:53 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |  10.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   3.9 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   5.7 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  69.2 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   9.0 |
-| STARTED Bind language to kernel                                             |         |       |  0:17 |   1.9 |
+| Stories                                                                     | 16:05   |       |       | 100.0 |
+| Active                                                                      |         | 16:05 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   9.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   3.6 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   5.3 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  64.0 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   8.3 |
+| STARTED Bind language to kernel                                             |         |       |  1:29 |   9.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -224,7 +224,7 @@ It seems that when we refer to a collection on the target model,
 resolution fails.
 
 *** STARTED Bind language to kernel                                   :story:
-    CLOCK: [2017-01-18 Wed 12:38]
+    CLOCK: [2017-01-18 Wed 12:38]--[2017-01-18 Wed 13:50] =>  1:12
     CLOCK: [2017-01-17 Tue 20:55]--[2017-01-17 Tue 21:12] =>  0:17
 
 At present we have the notion of a language at the frontend level but
