--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,22 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-18 Wed 14:54]
+#+CAPTION: Clock summary at [2017-01-18 Wed 15:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *17:05* |       |       | 100.0 |
+| *Total time*                                                                | *18:06* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 17:05   |       |       | 100.0 |
-| Active                                                                      |         | 17:05 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   9.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   3.4 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   5.0 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  60.3 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   7.8 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   8.7 |
-| STARTED Add multi-language support                                          |         |       |  0:42 |   4.1 |
-| STARTED Add a type mapper                                                   |         |       |  0:18 |   1.8 |
+| Stories                                                                     | 18:06   |       |       | 100.0 |
+| Active                                                                      |         | 18:06 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   8.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   3.2 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   4.7 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  56.9 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   7.4 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   8.2 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   5.6 |
+| STARTED Add multi-language support                                          |         |       |  0:42 |   3.9 |
+| STARTED Add a type mapper                                                   |         |       |  0:18 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -237,6 +238,18 @@ all. This is not ideal; we could instead determine what languages the
 kernel supports and only generate if its a supported language. This
 would stop us code-generating a C# model in C++ and vice-versa.
 
+*** COMPLETED Upsilon can have collections of collections             :story:
+    CLOSED: [2017-01-18 Wed 15:56]
+    CLOCK: [2017-01-18 Wed 14:54]--[2017-01-18 Wed 15:55] =>  1:01
+
+Our current translation of Upsilon collections assumes they are always
+containers of compounds. In practice, collections of collections have
+been spotted in the wild and they break because we do not follow the
+collection scrubbing into the type name.
+
+While fixing this bug we hit a disk space issue on the debian box
+which resulted in delays.
+
 *** STARTED Add multi-language support                                :story:
     CLOCK: [2017-01-18 Wed 14:29]--[2017-01-18 Wed 14:53] =>  0:24
     CLOCK: [2017-01-18 Wed 13:58]--[2017-01-18 Wed 14:10] =>  0:12
@@ -338,6 +351,12 @@ language to LAM them from LAM to language. If already in LAM then only
 one look-up is required. Mapping must also include removal. Actually
 this requirement is only needed for ModelValue; upsilon could filter
 out any extends of this type, greatly simplifying the mapping logic.
+
+*** Backslashes in strings cause JSON parsing to failed                 :story:
+
+When trying to JQ an upsilon model, JQ failed with an error due to the
+use of un-escaped backslashes. We need to add this to the tidy-up
+string list.
 
 *** Add support for ignoring types                                    :story:
 
