--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-21 Sat 12:55]
+#+CAPTION: Clock summary at [2017-01-23 Mon 10:38]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *32:33* |       |       | 100.0 |
+| *Total time*                                                                | *34:51* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 32:33   |       |       | 100.0 |
-| Active                                                                      |         | 32:33 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   4.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.8 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.6 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  31.6 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   4.1 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   4.6 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   3.1 |
-| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.1 |
-| STARTED Add multi-language support                                          |         |       |  8:47 |  27.0 |
-| STARTED Add a type mapper                                                   |         |       |  6:19 |  19.4 |
+| Stories                                                                     | 34:51   |       |       | 100.0 |
+| Active                                                                      |         | 34:51 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   4.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.7 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.4 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  29.6 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.8 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   4.3 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.9 |
+| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.0 |
+| STARTED Add multi-language support                                          |         |       | 11:05 |  31.8 |
+| STARTED Add a type mapper                                                   |         |       |  6:19 |  18.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -263,6 +263,8 @@ not match the kernel's.
 : 2017-01-18 20:54:38.534027 [ERROR] [utility.filesystem.file] Could not find directory: /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/../test_data/TestModel/actual.upsilon/Zeta
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-23 Mon 09:12]--[2017-01-23 Mon 10:38] =>  1:26
+    CLOCK: [2017-01-22 Sun 14:31]--[2017-01-22 Sun 15:23] =>  0:52
     CLOCK: [2017-01-21 Sat 11:32]--[2017-01-21 Sat 12:55] =>  1:23
     CLOCK: [2017-01-21 Sat 09:47]--[2017-01-21 Sat 10:04] =>  0:17
     CLOCK: [2017-01-21 Sat 08:15]--[2017-01-21 Sat 09:46] =>  1:31
@@ -336,6 +338,7 @@ Assorted Notes:
   current language) so the net result is we are deleting
   everything. We need to somehow supply the language dependent path to
   the house keeper or do a single run with the combined set of files.
+- we need to detect inheritance in mapper and inject shared pointers.
 
 Tasks:
 
