--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-23 Mon 11:03]
+#+CAPTION: Clock summary at [2017-01-23 Mon 11:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:15* |       |       | 100.0 |
+| *Total time*                                                                | *35:26* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:15   |       |       | 100.0 |
-| Active                                                                      |         | 35:15 |       | 100.0 |
+| Stories                                                                     | 35:26   |       |       | 100.0 |
+| Active                                                                      |         | 35:26 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   4.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.6 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.4 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  29.2 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  29.1 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.8 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   4.2 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.9 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.0 |
-| STARTED Add multi-language support                                          |         |       | 11:29 |  32.6 |
-| STARTED Add a type mapper                                                   |         |       |  6:19 |  17.9 |
+| STARTED Add multi-language support                                          |         |       | 11:40 |  32.9 |
+| STARTED Add a type mapper                                                   |         |       |  6:19 |  17.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -263,6 +263,7 @@ not match the kernel's.
 : 2017-01-18 20:54:38.534027 [ERROR] [utility.filesystem.file] Could not find directory: /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/../test_data/TestModel/actual.upsilon/Zeta
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-23 Mon 11:04]--[2017-01-23 Mon 11:15] =>  0:11
     CLOCK: [2017-01-23 Mon 10:39]--[2017-01-23 Mon 11:03] =>  0:24
     CLOCK: [2017-01-23 Mon 09:12]--[2017-01-23 Mon 10:38] =>  1:26
     CLOCK: [2017-01-22 Sun 14:31]--[2017-01-22 Sun 15:23] =>  0:52
