--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-23 Mon 11:15]
+#+CAPTION: Clock summary at [2017-01-23 Mon 11:45]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:26* |       |       | 100.0 |
+| *Total time*                                                                | *35:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:26   |       |       | 100.0 |
-| Active                                                                      |         | 35:26 |       | 100.0 |
+| Stories                                                                     | 35:55   |       |       | 100.0 |
+| Active                                                                      |         | 35:55 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.6 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.4 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  29.1 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.8 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   4.2 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.9 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  28.7 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.7 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   4.1 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.8 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.0 |
-| STARTED Add multi-language support                                          |         |       | 11:40 |  32.9 |
-| STARTED Add a type mapper                                                   |         |       |  6:19 |  17.8 |
+| STARTED Add multi-language support                                          |         |       | 12:09 |  33.8 |
+| STARTED Add a type mapper                                                   |         |       |  6:19 |  17.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -263,6 +263,8 @@ not match the kernel's.
 : 2017-01-18 20:54:38.534027 [ERROR] [utility.filesystem.file] Could not find directory: /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/../test_data/TestModel/actual.upsilon/Zeta
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-23 Mon 11:44]--[2017-01-23 Mon 11:45] =>  0:01
+    CLOCK: [2017-01-23 Mon 11:16]--[2017-01-23 Mon 11:44] =>  0:28
     CLOCK: [2017-01-23 Mon 11:04]--[2017-01-23 Mon 11:15] =>  0:11
     CLOCK: [2017-01-23 Mon 10:39]--[2017-01-23 Mon 11:03] =>  0:24
     CLOCK: [2017-01-23 Mon 09:12]--[2017-01-23 Mon 10:38] =>  1:26
@@ -341,6 +343,7 @@ Assorted Notes:
   everything. We need to somehow supply the language dependent path to
   the house keeper or do a single run with the combined set of files.
 - we need to detect inheritance in mapper and inject shared pointers.
+- mark target and proxy correctly for upsilon based on the schema.
 
 Tasks:
 
