--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-23 Mon 11:45]
+#+CAPTION: Clock summary at [2017-01-23 Mon 11:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *35:55* |       |       | 100.0 |
+| *Total time*                                                                | *36:02* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 35:55   |       |       | 100.0 |
-| Active                                                                      |         | 35:55 |       | 100.0 |
+| Stories                                                                     | 36:02   |       |       | 100.0 |
+| Active                                                                      |         | 36:02 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:32 |   4.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.6 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.4 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  28.7 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  28.6 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.7 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   4.1 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.8 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   1.0 |
-| STARTED Add multi-language support                                          |         |       | 12:09 |  33.8 |
-| STARTED Add a type mapper                                                   |         |       |  6:19 |  17.6 |
+| STARTED Add multi-language support                                          |         |       | 12:16 |  34.0 |
+| STARTED Add a type mapper                                                   |         |       |  6:19 |  17.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -263,6 +263,7 @@ not match the kernel's.
 : 2017-01-18 20:54:38.534027 [ERROR] [utility.filesystem.file] Could not find directory: /home/marco/Development/DomainDrivenConsulting/dogen/build/output/gcc/Release/stage/bin/../test_data/TestModel/actual.upsilon/Zeta
 
 *** STARTED Add multi-language support                                :story:
+    CLOCK: [2017-01-23 Mon 11:46]--[2017-01-23 Mon 11:53] =>  0:07
     CLOCK: [2017-01-23 Mon 11:44]--[2017-01-23 Mon 11:45] =>  0:01
     CLOCK: [2017-01-23 Mon 11:16]--[2017-01-23 Mon 11:44] =>  0:28
     CLOCK: [2017-01-23 Mon 11:04]--[2017-01-23 Mon 11:15] =>  0:11
