--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,25 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-23 Mon 15:30]
+#+CAPTION: Clock summary at [2017-01-23 Mon 16:52]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *38:24* |       |       | 100.0 |
+| *Total time*                                                                | *39:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 38:24   |       |       | 100.0 |
-| Active                                                                      |         | 38:24 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:53 |   4.9 |
+| Stories                                                                     | 39:44   |       |       | 100.0 |
+| Active                                                                      |         | 39:44 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:53 |   4.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.5 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.2 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  26.8 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.5 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   3.9 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.1 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  25.9 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.4 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   3.7 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.6 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.9 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  35.1 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  16.4 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  33.9 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  15.9 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   2.1 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -433,14 +434,20 @@ When trying to JQ an upsilon model, JQ failed with an error due to the
 use of un-escaped backslashes. We need to add this to the tidy-up
 string list.
 
-*** Add log-level to command line                                     :story:
+*** COMPLETED Add log-level to command line                           :story:
+    CLOSED: [2017-01-23 Mon 16:41]
+    CLOCK: [2017-01-23 Mon 16:47]--[2017-01-23 Mon 16:52] =>  0:05
+    CLOCK: [2017-01-23 Mon 15:31]--[2017-01-23 Mon 16:46] =>  1:15
 
 We are now increasingly logging at trace levels. We need to allow
 users to supply a more fine-grained log configuration. This could be
 done by simply allowing users to set the log level via a command-line
 flag: =log_level=. It would replace verbose.
 
-Or we could simply add a new flag like =extra-verbose=.
+Or we could simply add a new flag like =extra-verbose=. We could also
+add =--quiet=. Actually with this we are just proliferating the number
+of command line options and introducing a layer of mapping between
+them and the logging.
 
 *** Fix recursive path lookup for upsilon                             :story:
 
