--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,26 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-23 Mon 16:52]
+#+CAPTION: Clock summary at [2017-01-23 Mon 17:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:44* |       |       | 100.0 |
+| *Total time*                                                                | *40:46* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:44   |       |       | 100.0 |
-| Active                                                                      |         | 39:44 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:53 |   4.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.5 |
+| Stories                                                                     | 40:46   |       |       | 100.0 |
+| Active                                                                      |         | 40:46 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:53 |   4.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.4 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.1 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  25.9 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.4 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   3.7 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.6 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  25.3 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.3 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   3.6 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.5 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.9 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  33.9 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  15.9 |
-| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   2.1 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   3.4 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  33.0 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  15.5 |
+| COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   2.0 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   3.3 |
+| COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   2.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -449,7 +450,10 @@ add =--quiet=. Actually with this we are just proliferating the number
 of command line options and introducing a layer of mapping between
 them and the logging.
 
-*** Fix recursive path lookup for upsilon                             :story:
+*** COMPLETED Fix recursive path lookup for upsilon                   :story:
+    CLOSED: [2017-01-23 Mon 17:56]
+    CLOCK: [2017-01-23 Mon 17:38]--[2017-01-23 Mon 17:56] =>  0:18
+    CLOCK: [2017-01-23 Mon 16:53]--[2017-01-23 Mon 17:37] =>  0:44
 
 It seems we still can't recurse upwards when looking for the
 components of the upsilon model.
