--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,28 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-23 Mon 18:01]
+#+CAPTION: Clock summary at [2017-01-23 Mon 21:10]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *40:49* |       |       | 100.0 |
+| *Total time*                                                                | *41:49* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 40:49   |       |       | 100.0 |
-| Active                                                                      |         | 40:49 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:53 |   4.6 |
+| Stories                                                                     | 41:49   |       |       | 100.0 |
+| Active                                                                      |         | 41:49 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:53 |   4.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   1.4 |
-| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.1 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  25.2 |
-| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.3 |
-| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   3.6 |
-| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.5 |
-| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.9 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  33.0 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  15.5 |
+| COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   2.0 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  24.6 |
+| COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   3.2 |
+| COMPLETED Bind language to kernel                                           |         |       |  1:29 |   3.5 |
+| COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   2.4 |
+| COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.8 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  32.2 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |  15.1 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   2.0 |
-| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   3.3 |
+| COMPLETED Add log-level to command line                                     |         |       |  1:20 |   3.2 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   2.5 |
-| STARTED In JSON hydrator rename simple name to simple                       |         |       |  0:03 |   0.1 |
+| COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   2.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -462,7 +462,9 @@ components of the upsilon model.
 We should also look first on the current directory and then make use
 of the relative path.
 
-*** STARTED In JSON hydrator rename simple name to simple             :story:
+*** COMPLETED In JSON hydrator rename simple name to simple           :story:
+    CLOSED: [2017-01-23 Mon 21:10]
+    CLOCK: [2017-01-23 Mon 20:10]--[2017-01-23 Mon 21:10] =>  1:00
     CLOCK: [2017-01-23 Mon 17:57]--[2017-01-23 Mon 18:00] =>  0:03
 
 We are still using =simple_name=. Make this consistent with the yarn
